@@ -26,6 +26,7 @@ BUG FIXES:
 +Fix event handlers not properly getting connected when going from 2 -> 1 window.
 +Fix eol mode settings in preferences.
 +Fix search bar text not being colored properly on msw/gtk.
++Fix window not being raised from taskbar when opening file with 'Open with...'
 
 #-----------------------------------------------------------------------------#
 
